Borders and spacing corrected
Unable to add top border for unknown reason

--- a/src/frontend/components/button/_button.scss
+++ b/src/frontend/components/button/_button.scss
@@ -588,8 +588,9 @@ $btn-border-radius: 23px;
   height: $button-size;
   margin: 0;
   padding: 0;
-  font-size: 16px;
-  line-height: $button-size;
+  font-size: 18px;
+  font-weight: bolder;
+  line-height: 16px;
 }
 
 .table-toggle--add .btn {
@@ -609,6 +610,5 @@ $btn-border-radius: 23px;
 
     content: "\E82B";
     color: $brand-danger;
-    font-weight: 800;
   }
 }
